<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/navigation_facebook"
            android:icon="@drawable/facebook"
            android:title="@string/menu_facebook" />

        <item
            android:id="@+id/navigation_youtube"
            android:icon="@drawable/youtube"
            android:title="@string/menu_Youtube" />

        <item
            android:id="@+id/navigation_twitter"
            android:icon="@drawable/twitter"
            android:title="@string/menu_twitter" />

        <item
            android:id="@+id/navigation_instagram"
            android:icon="@drawable/instagram"
            android:title="@string/menu_instagram"/>

        <item
            android:id="@+id/navigation_contact"
            android:icon="@drawable/ic_phone_in_talk_black_24dp"
            android:title="@string/menu_contact"/>
</menu>